minor updates a first image was added

--- a/style.css
+++ b/style.css
@@ -67,8 +67,15 @@ p{
     display: flex;
     justify-content:space-around;
     align-items: flex-start;
-    flex:1
+    flex:1 ;
     
 
     
+}
+
+.section .block{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
