--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
     padding: 0;
 }
 
-
+body{
+    background: url(imgs/wallpaper.jpg);
+    background-size: cover;
+    background-position: center;
+}
 .navbar .container{
     display:flex;
     justify-content: flex-end;
@@ -37,16 +41,19 @@ ul{
     padding-bottom: 20;
     padding-top: 0;
     color: orangered;
-    font-size: xx-large;
+    font-size: 200px;
     font-weight: bolder;
     font-style: oblique;
     text-shadow: 2px 2px 4px;
     text-align: center;
+    border: 2px,solid,black ;
+    border-radius: 25%;
 }
 
 img{
     max-width: 50%;
     max-height: 50%;
+    border-radius: 50%;
 }
 
 
@@ -61,6 +68,10 @@ img{
 p{
     margin: 30px;
     font-size: large;
+    letter-spacing: 1px;
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: blueviolet;
 }
 
 .section .item{
